installed Goggle Natural Language API, included function to get post and sentiments from the API, modified Guzzle from 7.0 to 6.5.5 because Google Natural Language API does not support Guzzle 7.0

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
-        "guzzlehttp/guzzle": "^7.0",
+        "google/cloud-language": "^0.22.4",
+        "guzzlehttp/guzzle": "6.5.5",
         "laravel/lumen-framework": "^7.0"
     },
     "require-dev": {
